# gsplat-mlx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Task.md  Task_360.md  Task_Fixed_Points.md  Task_Metal.md  pyproject.toml  setup.py
docs/: index.html  robots.txt  sitemap.xml
docs/static/css/: index.css
gsplat_core/: dummy.cpp  gsplat_intersect.cpp  gsplat_projection.cpp  gsplat_quat_scale_to_covar.cpp  gsplat_rasterize.cpp  gsplat_spherical_harmonics.cpp  helper.cpp
gsplat_core/binding/: binding.cpp
gsplat_core/include/: dummy.h  gsplat_intersect.h  gsplat_projection.h  gsplat_quat_scale_to_covar.h  gsplat_rasterize.h  gsplat_spherical_harmonics.h  helper.h
gsplat_core/metal/: gsplat_intersect.metal  gsplat_projection.metal  gsplat_quat_scale_to_covar.metal  gsplat_rasterize.metal  gsplat_spherical_harmonics.metal
gsplat_core/test/: test.cpp
note/: gsplat_3dgs_forward_sh_path.md  gsplat_backward_api_and_fixture_schema.md  gsplat_backward_source_map.md  gsplat_cuda_source_map.md  mlx_nanobind_version.md  mlx_swift_cxx_porting_package.md  mlx_training_gradient_proxy.md  mlx_vs_mlx2_scanner_training.md  projection_backward_gpu_path.md
python_package/gsplat_core/: __init__.py
scripts/dataset/: b075x65r3x_dataset.py  dodecahedron_dataset.py  image_fitting_dataset.py  training_dataset.py
scripts/export_ref/: README.md  export_forward_3dgs_chain.py  export_intersect_tile_forward.py  export_projection_ewa_3dgs_fused_backward.py  export_projection_ewa_3dgs_fused_edge_cases.py  export_projection_ewa_3dgs_fused_forward.py  export_quat_scale_to_covar_preci_backward.py  export_quat_scale_to_covar_preci_backward_edge_cases.py  export_quat_scale_to_covar_preci_edge_cases.py  export_quat_scale_to_covar_preci_forward.py  export_rasterize_to_pixels_3dgs_backward.py  export_rasterize_to_pixels_3dgs_forward.py  export_rasterize_to_pixels_3dgs_masks.py  export_spherical_harmonics_backward.py  export_spherical_harmonics_backward_degrees.py  export_spherical_harmonics_degree4_masks.py  export_spherical_harmonics_forward.py  export_training_reference_config.py  export_utils.py
scripts/test/: absgrad_refine_debug.py  apply_bounded_colmap_pose_correction.py  autograd_vjp_smoke.py  colmap_360_dataset.py  compare_exported_npz.py  compare_training_summary.py  dataset_geometry_diagnostics.py  dummy.py  export_scanapp_colmap_seed_model.py  export_scanner_points_spz.py  export_spz_variants_from_model_npz.py  forward_3dgs_chain.py  image_loss_debug.py  intersect_tile_forward.py  optimizer_lr_schedule_debug.py  parity_forward_3dgs_chain.py  parity_intersect_tile_forward.py  parity_projection_ewa_3dgs_fused_forward.py  parity_quat_scale_to_covar_preci_forward.py  parity_rasterize_to_pixels_3dgs_forward.py  parity_spherical_harmonics_forward.py  parity_utils.py  prepare_scanapp_video_dataset.py  projection_ewa_3dgs_fused_forward.py  projection_vjp_guardrails.py  quat_scale_to_covar_preci_forward.py  rasterize_to_pixels_3dgs_forward.py  refine_colmap_seed_poses.py  refine_state_reset_debug.py  refine_strategy_branches_debug.py  render_random_3dgs_png.py  scanner_dataloader_debug.py  scanner_dataset_random_render_smoke.py  scanner_dataset_utils.py  scanner_initialization_debug.py  scanner_points_alignment_render.py  scanner_points_training_utils.py  spherical_harmonics_forward.py  spz_convention_debug.py  train_360_points_multiview_3dgs_mlx.py  (+20 more)
